--- a/styles/style.css
+++ b/styles/style.css
@@ -156,12 +156,42 @@ header {
   width: 100%;
   padding: 0px 135px;
 }
-
+.burger {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  z-index: 1001;
+}
+.burger span {
+  width: 25px;
+  height: 3px;
+  background-color: #333333;
+}
 .nav-container {
   display: flex;
   gap: 56px;
 }
-
+/*mobile navigation*/
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 70%;
+  height: 100%;
+  background-color: #f4f4f4;
+  color: black;
+  z-index: 1000;
+}
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.mobile-menu a {
+  color: black;
+}
 /* Main */
 
 main {
@@ -195,8 +225,14 @@ section {
 
 /* ფრჩხილებში რა ზომასაც დავწერ, მარტო იმ ზომაზე იმოქმდებს ჩემს მიერ დაწერილი კოდი */
 @media (max-width: 880px) {
-  nav {
+  .desktop-menu {
     display: none;
+  }
+  .burger {
+    display: flex;
+  }
+  .mobile-menu {
+    display: flex;
   }
 }
 
